--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,11 @@
   scrollbar-color: var(--accent-cyan) var(--bg-dark);
 }
 
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #04080f;
   background-image: url('/cosmic_bg.png');
@@ -62,7 +67,6 @@ body {
   font-family: var(--font-body);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
   line-height: 1.6;
 }
 
